--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,59 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  background-color: rgb(153, 81, 225)!important;
 }
-
-ol,
-ul {
-  padding-left: 30px;
+.board-container{
+  height: fit-content!important;
 }
-
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table;
-}
-
-.status {
-  margin-bottom: 10px;
-}
-
 .square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
+  background: rebeccapurple;
+  border: 1px solid rgb(59, 19, 99);
+  font-size: 2.7em;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  height: 90px;
   margin-right: -1px;
   margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  width: 90px;
+  color: #dbbefc;
 }
-
+h1{
+  font-size: 3.5rem!important;
+}
+.back-rose{
+  background-color: rgb(153, 81, 225)!important;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.35)!important
+}
+.game-info{
+  min-width: 300px!important;
+}
+.game-info h3{
+  font-size: 2rem;
+}
 .square:focus {
   outline: none;
 }
 
+.win-square{
+  color: rebeccapurple;
+  background:transparent!important;
+}
 .kbd-navigation .square:focus {
   background: #ddd;
 }
-
-.game {
-  display: flex;
-  flex-direction: row;
+.revert-label{
+  font-size: 20px!important;
 }
 
+.game{
+  gap:30px;
+}
 .game-info {
   margin-left: 20px;
 }
 .selected-move {
-  text-decoration: underline blue;
-  font-weight: bold;
+  text-decoration: underline rebeccapurple;
+  font-weight: bold!important;
 }
 .win-square{
   background-color: burlywood;
